--- a/index.html
+++ b/index.html
@@ -1,47 +1,35 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AguaSite</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
-            color: #333;
-            text-align: center;
-            padding: 50px;
-        }
-        h1 {
-            font-size: 3em;
-            margin-bottom: 20px;
-        }
-        .beta {
-            font-size: 0.8em;
-            color: #666;
-        }
-        .nav {
-            margin-top: 30px;
-        }
-        .nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #0077cc;
-            font-size: 1.2em;
-        }
-        .nav a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>Welcome to Aquacord</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+
 <body>
-    <h1>AguaSite</h1>
-    <div class="beta">BETA</div>
-    <p>Dive into a new wave of communication</p>
-    <div class="nav">
-        <a href="login.html">Login</a>
-        <a href="register.html">Register</a>
-        <a href="support.html">Support</a>
+    <div class="welcome-container">
+        <div class="welcome-content">
+            <h1 class="welcome-title">
+                AquaSite
+                <span class="beta-badge">BETA</span>
+            </h1>
+            <p class="welcome-subtitle">Dive into a new wave of communication</p>
+
+            <div class="welcome-buttons">
+                <a href="/login" class="welcome-button">
+                    <i class="fas fa-sign-in-alt"></i> Login
+                </a>
+                <a href="/register" class="welcome-button">
+                    <i class="fas fa-user-plus"></i> Register
+                </a>
+                <a href="https://discord.gg/UzdebU4uVQ" class="welcome-button discord" target="_blank">
+                    <i class="fab fa-discord"></i> Support
+                </a>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
