--- a/register.html
+++ b/register.html
@@ -1,54 +1,32 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - AguaSite</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
-            color: #333;
-            text-align: center;
-            padding: 50px;
-        }
-        .register-form {
-            margin: 20px auto;
-            width: 300px;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .register-form input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        .register-form button {
-            width: 100%;
-            padding: 10px;
-            background-color: #0077cc;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .register-form button:hover {
-            background-color: #005fa3;
-        }
-    </style>
+    <title>Aquacord - Register</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Register</h1>
-    <div class="register-form">
-        <input type="text" placeholder="Username" required>
-        <input type="email" placeholder="Email" required>
-        <input type="password" placeholder="Password" required>
-        <button type="submit">Register</button>
+    <div class="register-container">
+        <div class="register-box">
+            <div class="logo-area">
+                <h1>AquaSite</h1>
+                <p class="slogan">Join the wave of communication</p>
+            </div>
+            <div class="form-container glass-effect">
+                <input type="text" id="username" placeholder="Username" class="modern-input">
+                <input type="email" id="email" placeholder="Email" class="modern-input">
+                <input type="password" id="password" placeholder="Password" class="modern-input">
+                <input type="password" id="confirm-password" placeholder="Confirm Password" class="modern-input">
+                <button onclick="register()" class="pulse-button">Create Account</button>
+                <p class="terms-notice">By creating an account, you agree to our <a href="/terms"
+                        class="link-button">Terms of Service</a></p>
+                <a href="/login" class="link-button">Already have an account?</a>
+            </div>
+        </div>
     </div>
-    <a href="index.html">Back to Home</a>
+    <script src="js/register.js"></script>
 </body>
+
 </html>
