--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <p class="welcome-subtitle">Dive into a new wave of communication</p>
 
             <div class="welcome-buttons">
-                <a href="/login" class="welcome-button">
+                <a href="login.html" class="welcome-button">
                     <i class="fas fa-sign-in-alt"></i> Login
                 </a>
-                <a href="/register" class="welcome-button">
+                <a href="register.html" class="welcome-button">
                     <i class="fas fa-user-plus"></i> Register
                 </a>
                 <a href="https://discord.gg/UzdebU4uVQ" class="welcome-button discord" target="_blank">
