--- a/login.html
+++ b/login.html
@@ -1,53 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - AguaSite</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
-            color: #333;
-            text-align: center;
-            padding: 50px;
-        }
-        .login-form {
-            margin: 20px auto;
-            width: 300px;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .login-form input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-        .login-form button {
-            width: 100%;
-            padding: 10px;
-            background-color: #0077cc;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .login-form button:hover {
-            background-color: #005fa3;
-        }
-    </style>
+    <title>AquaSite - Login</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Login</h1>
-    <div class="login-form">
-        <input type="text" placeholder="Username" required>
-        <input type="password" placeholder="Password" required>
-        <button type="submit">Login</button>
+    <div id="login-container">
+        <h1>Login to AquacSite</h1>
+        <div class="form-container">
+            <input type="text" id="username" placeholder="Username">
+            <input type="password" id="password" placeholder="Password">
+            <button onclick="login()">Login</button>
+            <a href="register.html" class="button">Need an account?</a>
+        </div>
     </div>
-    <a href="index.html">Back to Home</a>
+    <script src="login.js"></script>
 </body>
+
 </html>
