--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@
             </div>
         </div>
     </div>
-    <script src="js/register.js"></script>
+    <script src="register.js"></script>
 </body>
 
 </html>
