--- a/register.html
+++ b/register.html
@@ -22,11 +22,10 @@
                 <button onclick="register()" class="pulse-button">Create Account</button>
                 <p class="terms-notice">By creating an account, you agree to our <a href="/terms"
                         class="link-button">Terms of Service</a></p>
-                <a href="/login" class="link-button">Already have an account?</a>
+                <a href="login.html" class="link-button">Already have an account?</a>
             </div>
         </div>
     </div>
     <script src="register.js"></script>
 </body>
-
 </html>
